# Beautiful-Soup-in-Rust

./: .gitignore  Cargo.toml  README.md  aliases.js  notes.txt  old_code.txt  sample.html  search-index.js  source-files.js
adler32/: struct.RollingAdler32.html
aho_corasick/: enum.ErrorKind.html  enum.MatchKind.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html
backtrace/: all.html  enum.BytesOrWideString.html  fn.resolve.html  fn.resolve_frame.html  fn.resolve_frame_unsynchronized.html  fn.resolve_unsynchronized.html  fn.trace.html  fn.trace_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
base64/: enum.CharacterSet.html  enum.DecodeError.html  struct.Config.html
bsr/: all.html  index.html  sidebar-items.js
bytes/: enum.BigEndian.html  enum.LittleEndian.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html
cookie/: all.html  enum.ParseError.html  enum.SameSite.html  index.html  struct.Cookie.html  struct.CookieBuilder.html  struct.CookieJar.html  struct.Delta.html  struct.EncodedCookie.html  struct.Iter.html
cookie_store/: CookieError.t.html  IdnaErrors.t.html  all.html  enum.CookieError.html  (+6 more)
(+6591 files in other folders)
