[package]
name = "bsr"
version = "0.1.0"
authors = ["Ishaan Madan <ishaanmadan2020@u.northwestern.edu>", "David Nelson <davidnelson2019@u.northwestern.edu>", "Alexander Fang <alexanderfang2019@u.northwestern.edu>"]
edition = "2018"

[dependencies]
nom = "4.2.3"
pest = "2.0"
pest_derive = "2.0"
reqwest = "0.9.17"